[package]
name = "planepulse"
version = "0.1.0"
edition = "2024"

[dependencies]
geoutils = "0.5.1"
reqwest = { version = "0.12.20", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.9.5"
serenity = { version = "0.12.4", features = ["model", "http"]}
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
ctrlc = { version = "3.4.7", features = ["termination"] }
